<resources>
    <string name="app_name">Engage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_post_hint">What\'s new with you?</string>
    <string name="image_post_description">Post image</string>
    <string name="stream">Stream</string>
    <string name="wesst">WESST</string>
    <string name="info">Info</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="members">Members</string>
    <string name="schools">Schools</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="my_stuff">My stuff</string>
    <string name="degree">Degree</string>
    <string name="year">Year</string>
    <string name="age">Age</string>
    <string name="send">Send</string>
    <string name="how_do_you_feel">How do you feel...</string>
    <string name="my_school">My School</string>
    <string name="wesst_feed">WESST Feed</string>
    <string name="my_profile">My Profile</string>
    <string name="wesst_info">WESST Info</string>
    <string name="conferences">Conferences</string>
    <string name="activity_feed">Activity feed</string>
    <string name="events">Events</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
</resources>
