<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stream"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/activity_feed" />
        <item
            android:id="@+id/nav_org"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/wesst" />
        <item
            android:id="@+id/nav_schools"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/schools" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/events" />




    </group>

</menu>
